fix: keyboard focus effect not showing on button style items

--- a/src/Styles/callout.css
+++ b/src/Styles/callout.css
@@ -221,7 +221,6 @@
 
         & li.tbar-item-focused {
             border-radius: var(--cg-nt-item-border-radius);
-            box-shadow: inset 0 0 0 1px var(--background-modifier-border);
             box-shadow: inset 0 0 0 2px var(--background-modifier-border-focus);
         }
 
@@ -434,6 +433,9 @@
                 background-color: var(--cg-nt-tbar-text-item-button-bg-color);
             }
         }
+        & li.tbar-item-focused {
+            box-shadow: 0 0 0 2px var(--background-modifier-border-focus);
+        }
     }
 
     &[data-callout-metadata*="mbtn"] ul {
@@ -445,6 +447,9 @@
                 [data-tbar-position="float"] & {
                     background-color: var(--cg-nt-tbar-text-item-button-bg-color);
                 }
+            }
+            & li.tbar-item-focused {
+                box-shadow: 0 0 0 2px var(--background-modifier-border-focus);
             }
         }
     }
